--- a/css/clinic/style.css
+++ b/css/clinic/style.css
@@ -102,40 +102,16 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #232323;
 }
 
-.search-btn, .search-form {
-    border-radius: 50%;
-    float: left;
-    width: 40px;
-    height: 40px;
-    margin: 0 0 0 -100%;
-    position: relative;
-    left: 7px
-}
-
 .search-form {
-    z-index: 50;
-    width: 324px;
+    border-bottom: 1px solid #BCBCBC;
+    width: 274px;
+    height: 35px;
+    background: no-repeat;
+    color: #8A8A8E;
 }
 
-.search-form form {
-    width: 324px;
-    border-radius: 20px;
-    background: #f6fafa;
-}
-
-.search-form input {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 22px;
-}
-
-.search-btn {
-    background: url('../../img/search-btn.png') no-repeat;
-    max-width: 20px;
-    margin: 0 0 0 -40px;
-    left: 0;
-    cursor: pointer
+.search img {
+    width: 20px;
 }
 
 .sort {
@@ -346,7 +322,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .pagination_listing {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     list-style-type: none;
 }
 
@@ -356,6 +332,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-weight: 800;
     font-size: 22px;
     line-height: 22px;
+    margin: 0 30px;
     display: flex;
     align-items: center;
     text-align: center;
@@ -578,14 +555,14 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 
-.footer__container {
+.footer__container{
     height: 800px;
     background: #F7EDDF;
     width: 100%;
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    padding: 80px;
+    padding: 80px 300px;
 }
 
 .footer__body {
@@ -600,15 +577,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 32px;
     line-height: 39px;
     color: #232323;
-}
-
-.footer__about-clinic-head {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: rgba(0, 0, 0, 0.8);
-    margin-bottom: 25px;
 }
 
 .mail-footer a {
@@ -727,7 +695,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
     justify-content: space-between;
 }
-
 
 
 
