--- a/css/main/mob-style.css
+++ b/css/main/mob-style.css
@@ -36,11 +36,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 0 10px;
 }
 
-.burger-menu {
-    background: url("../../img/menu-btn.png")no-repeat;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+.burger-menu img {
+    width: 70px;
 }
 
 .logo {
@@ -54,6 +51,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .search-form {
     font-size: 35px;
+    text-decoration-line: underline;
+}
+
+.search-form img {
+    margin-right: 30px;
 }
 
 .main_wrap {
