--- a/css/main/style.css
+++ b/css/main/style.css
@@ -116,39 +116,25 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .search-btn, .search-form {
-    border-radius: 50%;
+ /*   border-radius: 50%;
     float: left;
     width: 40px;
     height: 40px;
     margin: 0 0 0 -100%;
     position: relative;
-    left: 7px
+    left: 7px*/
 }
 
 .search-form {
-    z-index: 50;
-    width: 324px;
+    border-bottom: 1px solid #BCBCBC;
+    width: 274px;
+    height: 35px;
+    background: no-repeat;
+    color: #8A8A8E;
 }
 
-.search-form form {
-    width: 324px;
-    border-radius: 20px;
-    background: #f6fafa;
-}
-
-.search-form input {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 22px;
-}
-
-.search-btn {
-    background: url('../../img/search-btn.png') no-repeat;
-    max-width: 20px;
-    margin: 0 0 0 -40px;
-    left: 0;
-    cursor: pointer
+.search img {
+    width: 20px;
 }
 
 .sort {
@@ -820,7 +806,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    padding: 80px;
+    padding: 80px 300px;
 }
 
 .footer__body {
@@ -835,15 +821,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 32px;
     line-height: 39px;
     color: #232323;
-}
-
-.footer__about-clinic-head {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: rgba(0, 0, 0, 0.8);
-    margin-bottom: 25px;
 }
 
 .mail-footer a {
@@ -962,8 +939,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
     justify-content: space-between;
 }
-
-
 
 
 
