--- a/css/doctor/mob-style.css
+++ b/css/doctor/mob-style.css
@@ -108,6 +108,16 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
 }
 
+.doctor-card__clinic-reviews {
+    font-size: 40px;
+    text-decoration-line: none;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.doctor-card__clinic-items {
+    padding: 10px;
+}
+
 .clinic-review img {
     width: 30px;
 }
@@ -137,12 +147,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 30px;
 }
 
-.percent-review {
-    font-size: 40px;
-    text-decoration-line: none;
-    color: rgba(0, 0, 0, 0.7);
-}
-
 .doctor-card__doctor-spec {
     color: rgba(0, 0, 0, 0.5);
     font-size: 30px;
@@ -170,6 +174,10 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .doctor_clinic-items {
     padding: 20px;
+}
+
+.doctor-card__clinic-metro-further {
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .clinic-schedule {
@@ -311,6 +319,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-top: 50px;
 }
 
+.service__condition-visit img {
+    margin-right: 20px;
+}
+
+
+.service__clinic-phone img {
+    margin-right: 20px;
+}
+
+.service-item a {
+    color: rgba(0, 0, 0, 0.8);
+}
+
 .clinic_service-item {
     list-style-type: none;
     margin-bottom: 25px;
@@ -364,8 +385,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .alert-for-view img {
-    width: 20px;
-    color: red;
+    width: 40px;
+    margin-right: 30px;
 }
 
 .alert-info {
@@ -373,13 +394,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
-
 .breadcrumbs-item {
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
-    line-height: 24px;
+    font-size: 40px;
+    line-height: 30px;
     text-decoration-line: underline;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.breadcrumbs-item1 {
+    font-size: 35px;
+    line-height: 24px;
+    text-decoration-line: none;
     color: rgba(0, 0, 0, 0.8);
 }
 
@@ -422,6 +449,12 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .last-review__doctor-card__head {
     display: flex;
+    margin-bottom: 20px;
+}
+
+.last-review__doctor-count-reviews {
+    font-size: 35px;
+    margin: 0 0 10px 260px;
 }
 
 .last-review__doctor-card__container {
@@ -455,15 +488,22 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
+.last-review__doctor-author img {
+    width: 30px;
+    margin-right: 15px;
+}
+
 .last-review__doctor-author{
     color: rgba(0, 0, 0, 0.7);
     font-size: 35px;
+    margin-bottom: 15px;
 }
 
 .last-review__doctor-comment-head {
     color: rgba(0, 0, 0, 0.8);
     font-size: 35px;
     font-weight: 500;
+    margin-bottom: 15px;
 }
 
 .last-review__doctor-comment {
@@ -568,7 +608,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #000000;
 }
 
-.email-footer {
+.email-footer a {
     color: rgba(0, 0, 0, 0.7);
     text-decoration-line: none;
     font-size: 45px;
