--- a/css/doctor/style.css
+++ b/css/doctor/style.css
@@ -152,11 +152,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 15px;
 }
 
-.doctor-card__doctor-reviews img {
-    max-width: 20px;
-}
-
-.percent-review {
+.doctor-card__doctor-reviews {
     font-style: normal;
     text-decoration-line: none;
     line-height: 20px;
@@ -164,11 +160,16 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-top: 5px;
 }
 
+.doctor-card__doctor-reviews img {
+    max-width: 20px;
+}
+
 .doctor-card__doctor-name {
     font-style: normal;
     font-weight: 500;
     font-size: 30px;
     color: #000000;
+    margin-bottom: 20px;
 }
 
 .doctor-card__doctor-category {
@@ -177,6 +178,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 16px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.6);
+    margin-bottom: 10px;
 }
 
 .doctor-card__doctor-spec {
@@ -184,11 +186,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
+    margin-bottom: 10px;
     color: rgba(0, 0, 0, 0.8);
 }
 
 .doctor-card__doctor-experience {
     color: #FF6472;
+    margin-bottom: 10px;
 }
 
 .doctor-card__doctor-clinics_active {
@@ -197,7 +201,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     background: rgba(255, 240, 75, 0.15);
     border-radius: 4px;
     padding: 10px;
-    margin-bottom: 20px;
+    margin: 20px 0;
 }
 
 .doctor-card__doctor_clinic-name span {
@@ -216,10 +220,16 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .doctor-card__clinic-schedule {
     color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+}
+
+.doctor-card__clinic-metro img {
+    width: 10px;
 }
 
 .doctor-card__clinic-metro-further {
     color: rgba(0, 0, 0, 0.5);
+    margin-top: 10px;
 }
 
 .doctor-card__doctor-clinics {
@@ -262,6 +272,10 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     height: 58px;
 }
 
+.doctor-card__clinic-active img {
+    width: 15px;
+}
+
 .doctor-card__clinic-active span {
     font-weight: 300;
     font-size: 16px;
@@ -294,6 +308,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
+.doctor-card__clinic-phone img {
+    width: 20px;
+    margin-right: 13px;
+}
+
 .doctor-card__doctor-registration {
     display: flex;
     justify-content: center;
@@ -303,7 +322,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .pagination_listing {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     list-style-type: none;
 }
 
@@ -313,6 +332,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-weight: 800;
     font-size: 22px;
     line-height: 22px;
+    margin: 0 30px;
     display: flex;
     align-items: center;
     text-align: center;
@@ -393,13 +413,23 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-top: 50px;
 }
 
-.service__condition-visit {
+.service__clinic-phone img {
+    width: 20px;
+    margin-right: 13px;
+}
+
+.service__condition-visit a {
+    color: rgba(0, 0, 0, 0.3);
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 17px;
     line-height: 17px;
     text-decoration-line: underline;
-    color: rgba(0, 0, 0, 0.3);
+}
+
+.service__condition-visit img {
+    width: 20px;
+    margin-right: 20px;
 }
 
 .last-review__doctor-title {
@@ -468,7 +498,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 50px;
 }
 
-.review__doctors {
+.last-review__doctors {
     display: flex;
 }
 
@@ -479,16 +509,16 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 0 10px;
 }
 
-.last-review__card-doctor {
+.last-review__doctor-card {
     width: 379px;
-    height: 204px;
+    height: 215px;
     background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     margin-right: 15px;
 }
 
-.last-review__card-doctor__photo img {
+.last-review__doctor-card__photo img {
     width: 81px;
 }
 
@@ -521,12 +551,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .last-review__doctor-author-review {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 10px;
+}
+
+.last-review__doctor-author-review img {
+    width: 13px;
+    margin-right: 5px;
 }
 
 .last-review__doctor-comment-head {
     font-weight: 500;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
+    margin-bottom: 5px;
 }
 
 .last-review__doctor-comment {
