--- a/css/main/style.css
+++ b/css/main/style.css
@@ -169,8 +169,9 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     text-align: center;
 }
 
-.clinic-phone img {
-    max-width: 100px;
+.clinic-card__phone img {
+    max-width: 17px;
+    margin-right: 15px;
 }
 
 .clinic-card__doctors {
@@ -194,11 +195,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
-.clinic-card__percent-review {
+.clinic-card__reviews {
     font-style: normal;
+    font-weight: 600;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.7);
     margin-top: 5px;
+    text-decoration-line: none;
 }
 
 .clinic-info {
@@ -236,6 +239,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 16px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 25px;
 }
 
 
@@ -243,7 +247,10 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 16px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.7);
+}
 
+.clinic-card__metro img {
+    width: 10px;
 }
 
 .clinic-card__metro-near {
@@ -347,19 +354,29 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 25px;
 }
 
+.service__clinic-phone img {
+    width: 20px;
+    margin-right: 13px;
+}
+
 .service__footer {
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
 }
 
-.service__condition-visit {
+.service__condition-visit a {
+    color: rgba(0, 0, 0, 0.3);
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 17px;
     line-height: 17px;
     text-decoration-line: underline;
-    color: rgba(0, 0, 0, 0.3);
+}
+
+.service__condition-visit img {
+    width: 20px;
+    margin-right: 20px;
 }
 
 .popular-doctor__img {
@@ -408,6 +425,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     line-height: 17px;
     color: rgba(0, 0, 0, 0.7);
     margin-bottom: 13px;
+    display: flex;
+}
+
+.popular-doctor__doctor-address img {
+    width: 15px;
+    margin-right: 20px;
+    height: 22px;
 }
 
 .popular-doctor__doctor-phone {
@@ -417,6 +441,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     line-height: 17px;
     color: rgba(0, 0, 0, 0.7);
     margin-bottom: 20px;
+}
+
+.popular-doctor__doctor-phone img {
+    width: 15px;
+    margin-right: 20px;
 }
 
 .rating-body {
@@ -467,6 +496,10 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin: 40px;
 }
 
+.popularquestions {
+    margin-bottom: 100px;
+}
+
 .popup-questions {
     text-align: center;
     margin: 40px;
@@ -482,7 +515,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .breadcrumbs {
-    margin-bottom: 30px;
+    margin-bottom: 80px;
 }
 
 
@@ -542,27 +575,20 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 50px;
 }
 
-.review__clinics {
+.last-review__clinics {
     display: flex;
 }
 
-.last-review_wrap {
-    height: 767px;
-    max-width: 1145px;
-    margin: 0 auto;
-    padding: 0 10px;
-}
-
-.last-review__card-clinic {
+.last-review__clinic-card {
     width: 379px;
-    height: 204px;
+    height: 210px;
     background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     margin-right: 15px;
 }
 
-.last-review__card-clinic__photo img {
+.last-review__clinic-card__photo img {
     width: 81px;
 }
 
@@ -595,12 +621,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .last-review__clinic__author-review {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 10px;
+}
+
+.last-review__clinic__author-review img {
+    width: 13px;
+    margin-right: 5px;
 }
 
 .last-review__clinic__comment-head {
     font-weight: 500;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
+    margin-bottom: 5px;
 }
 
 .last-review__clinic__comment {
@@ -674,7 +707,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 50px;
 }
 
-.review__doctors {
+.last-review__doctors {
     display: flex;
 }
 
@@ -685,16 +718,16 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 0 10px;
 }
 
-.last-review__card-doctor {
+.last-review__doctor-card {
     width: 379px;
-    height: 204px;
+    height: 215px;
     background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     margin-right: 15px;
 }
 
-.last-review__card-doctor__photo img {
+.last-review__doctor-card__photo img {
     width: 81px;
 }
 
@@ -727,12 +760,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .last-review__doctor-author-review {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 10px;
+}
+
+.last-review__doctor-author-review img {
+    width: 13px;
+    margin-right: 5px;
 }
 
 .last-review__doctor-comment-head {
     font-weight: 500;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
+    margin-bottom: 5px;
 }
 
 .last-review__doctor-comment {
